--- a/view/cdli-user-profile/profile/section/zfcuser.phtml
+++ b/view/cdli-user-profile/profile/section/zfcuser.phtml
@@ -3,7 +3,7 @@
 <?php foreach ($this->registerForm->getElements() as $element) { ?>
     <?php $settingsName = $element->getName() == 'passwordVerify' ? 'password' : $element->getName(); ?>
     <?php if ( @$this->fieldSettings[$settingsName]['displayed'] ) { ?>
-    <?php   if ($element->getAttribute('label') != null) { ?>
+    <?php   if ($element->getLabel() != null) { ?>
     <dt><?php echo $this->formLabel($element); ?></dt>
     <?php } ?>
     <dd><?php echo ( @$this->fieldSettings[$settingsName]['editable'] === false ? $this->escape($element->getAttribute('value')) : $this->formInput($element) ) . $this->formElementErrors($element); ?></dd>
