Updated profile save to detect success/failure and transmit message back to user

--- a/view/cdli-user-profile/profile/index.phtml
+++ b/view/cdli-user-profile/profile/index.phtml
@@ -1,4 +1,12 @@
-<h1><?php echo $this->escape($this->zfcUserIdentity()->getDisplayName()); ?>'s Profile</h2>
+<h1><?php echo $this->escape($this->user->getDisplayName()); ?>'s Profile</h2>
+
+<?php if (isset($this->messages) && count($this->messages) > 0 ): ?>
+<?php foreach ($this->messages as $msg): ?>
+<div class="alert alert-<?php echo $this->escapeHtmlAttr($msg['type']); ?>">
+    <?php if (isset($msg['icon'])) echo '<i class="'.$this->escapeHtmlAttr($msg['icon']).'"></i>&nbsp;'; ?><?php echo $this->escapeHtml($msg['message']); ?>
+</div>
+<?php endforeach; ?>
+<?php endif; ?>
 
 <form action="<?php echo $this->url('zfcuser/profile'); ?>" method="POST">
 <?php
@@ -6,6 +14,7 @@ $FieldSettings = \CdliUserProfile\Module::getOption('field-settings');
 foreach ( $this->sections as $name=>$section ) {
     $vm = $section->getViewModel();
     $vm->setVariable('fieldSettings', (array)@$FieldSettings[$name]);
+    $vm->setVariable('user', $this->user);
 
     echo $this->render($vm);
 }
