Update view script to use escapeHtml() instead of (removed) escape()

--- a/view/cdli-user-profile/profile/section/zfcuser.phtml
+++ b/view/cdli-user-profile/profile/section/zfcuser.phtml
@@ -6,6 +6,6 @@
     <?php   if ($element->getLabel() != null) { ?>
     <dt><?php echo $this->formLabel($element); ?></dt>
     <?php } ?>
-    <dd><?php echo ( @$this->fieldSettings[$settingsName]['editable'] === false ? $this->escape($element->getAttribute('value')) : $this->formInput($element) ) . $this->formElementErrors($element); ?></dd>
+    <dd><?php echo ( @$this->fieldSettings[$settingsName]['editable'] === false ? $this->escapeHtml($element->getAttribute('value')) : $this->formInput($element) ) . $this->formElementErrors($element); ?></dd>
 <?php }} ?>
 </dl>
